traefik-ingress-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: base-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: helloworld.app
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 80

  - host: localhost
    http:
      paths:
        - path: /
          backend:
            serviceName: helloworld
            servicePort: 80
