traefik-ingress-helm/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-http
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`myhost.mydomain.tld`)
    kind: Rule
    priority: 100
    services:
    - name: helloworld
      kind: Service
      passHostHeader: true
      port: 80
